@@ -1,3 +1,8 @@
+2015-04-14  Youri Hoogstrate
+	* Added two util functions:
+	  - min()
+	  - file_exists()
+
 2015-02-25  Youri Hoogstrate
 	* Added Direction definition
 	* Added Sequence definition
